# mmals-cal

./: .gitignore  CHANGELOG.md  CITATION.cff  DELETED_PATHS.txt  DELTA_README.md  GITHUB_RELEASE_NOTES.md  LICENSE_NOT_SELECTED.md  Makefile  PATCH_MANIFEST.csv  README.md  RELEASE_NOTES.md  REPORT.md  SHA256SUMS.txt  SHA256SUMS_DELTA.txt  STATUS.json  manifest.json  pyproject.toml  references.bib  requirements.txt  tatus
configs/: cross_benchmark_v0.3.2.json
data/: external_source_locations.csv  selected_trace_registry.csv
docs/: COMPONENTS_A_TO_D.md  CONFORMAL_CALIBRATION_QUANTILE.md  CURRENT_STATUS_AND_REVIEWER_ORIENTATION.md  ENGINEERING_AFTER_PHD.md  FOR_12_YEAR_OLDS.md  METHODOLOGY.md  MMALS_CAL_POSITIONING.md  OFFLINE_TO_ONLINE_ROADMAP.md  REPRODUCIBILITY.md  SEMANTIC_FOUNDATIONS_AND_RESEARCH_DIALOGUE.md  VERIFICATION_FRAMEWORK.md
notebooks/: MMALS_CAL_v0_3_2_Cross_Benchmark_Evidence_Synthesis.ipynb  MMALS_CAL_v0_3_2_Cross_Benchmark_Evidence_Synthesis_EXECUTED.ipynb
paper/: README.md  annotated_references.md  annotated_references.tex  from_initial_gap_analysis_to_v032.tex  main.tex  semantic_foundations_and_research_dialogue.tex
results/: benchmark_profile.csv  claim_verification.csv  context_by_task.csv  context_summary.csv  fashion_rc2o_patch_comparison.csv  five_axis_profile.csv  input_verification.csv  protocol_verification.csv  regime_summary_by_seed_task.csv  replay_status.json  seed_summary.csv  split_summary.csv  strategy_summary.csv  verification_status.json
scripts/: extract_selected_traces.py  register_external_source.py  reproduce_figures.py  (+2 more)
(+9 files in other folders)
