[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mmals-cal"
version = "0.3.2"
description = "Regime-aware conformal evidence verification for continual-learning traces"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24", "pandas>=2.0", "matplotlib>=3.7"]

[tool.setuptools.packages.find]
where = ["src"]
